--- a/src/index.css
+++ b/src/index.css
@@ -27,6 +27,10 @@ ol, ul {
   margin-bottom: 10px;
 }
 
+.btn-group--vertical button {
+  display: block;
+}
+
 .square {
   background: #fff;
   border: 1px solid #999;
